# OmniCPP-template

./: .ccls  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  FINAL_COMPLETION_REPORT.md  FINAL_PROJECT_SUMMARY.md  IMMEDIATE_ACTIONS_SUMMARY.md  LICENSE  NEXT_STEPS.md  OmniCppController.py  PROJECT_STATUS_AND_HANDOFF.md  README.md  REFACTORING_SUMMARY.md  VERIFICATION_CHECKLIST.md  WAYLAND_COMPOSITOR_QA_TEST_REPORT_2026-02-01.md  WAYLAND_COMPOSITOR_QA_TEST_REPORT_2026-02-01_FINAL.md  dependencies.cmake  flake.nix  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  scaffold_directories.py  vcpkg.json
.specs/: phase12_verification_report.md  phase1_cicd_pipeline_report.md  phase1_completion_report.md  phase1_development_branch_report.md  phase1_environment_verification.md  phase1_precommit_hooks_report.md  phase1_preparation_report.md  phase1_project_tracking_board_report.md  phase1_tools_installation_report.md  phase2_analysis.md  phase2_completion_report.md  phase2_execution_plan.md  tasks.md
CPM_modules/: FindCPMLicenses.cmake.cmake  FindOpenSSL.cmake  Findcxxopts.cmake  Findjson.cmake
assets/: customstrings.json  ems-mini.html
cmake/: AdvancedTesting.cmake  CPM.cmake  CompilerFlags.cmake  ConanIntegration.cmake  Coverage.cmake  FindDependencies.cmake  FormatTargets.cmake  InstallRules.cmake  LintTargets.cmake  OmniCppEngineConfig.cmake.in  PackageConfig.cmake  PlatformConfig.cmake  ProjectConfig.cmake  PropertyTesting.cmake  Testing.cmake  VcpkgIntegration.cmake
conan/: conan_toolchain.cmake  conanfile.py  setup_clang.bat  setup_clang_mingw.bat  setup_clang_mingw_ucrt.bat  setup_emscripten.sh  setup_gcc_mingw.bat
config/: build.json  compilers.json  logging.json  logging_cpp.json  logging_python.json  project.json  targets.json
docs/: api-documentation.md  cachyos-builds.md  compiler-detection-tests.md  compiler-detection.md  conan-linux-profiles.md  developer-guide.md  index.md  linux-builds.md  linux-troubleshooting.md  migration-guide.md  mingw-builds.md  msvc-builds.md  nix-development.md  troubleshooting-guide.md  troubleshooting.md  vscode-linux-setup.md  (+3 more)
examples/: CMakeLists.txt
examples/pong/: CMakeLists.txt  main.cpp  pong_game.cpp  pong_game.hpp
examples/simple_game/: CMakeLists.txt  main.cpp
src/engine/: AudioManager.cpp  CMakeLists.txt  ConsoleLogger.cpp  Engine.cpp  InputManager.cpp  Logger.cpp  PhysicsEngine.cpp  Platform.cpp  Renderer.cpp  ResourceManager.cpp
src/engine/Qt/: ControlPanel.cpp  ControlPanel.hpp  FPSOverlay.cpp  FPSOverlay.hpp  MainWindow.cpp  MainWindow.hpp  QtVulkanIntegration.cpp  QtVulkanIntegration.hpp  RenderWidget.cpp  RenderWidget.hpp
src/engine/Vulkan/: PyramidGeometry.cpp  PyramidGeometry.hpp  ShaderManager.cpp  ShaderManager.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/engine/audio/: audio_manager.cpp
src/engine/core/: engine.cpp
src/engine/ecs/: Component.cpp  Entity.cpp  MeshComponent.cpp  TransformComponent.cpp
src/engine/events/: event_manager.cpp
src/engine/graphics/: renderer.cpp
src/engine/input/: input_manager.cpp
src/engine/logging/: QuillLogger.cpp  SpdLogLogger.cpp  logger.cpp
src/engine/memory/: memory_manager.cpp
src/engine/network/: network_manager.cpp
src/engine/physics/: physics_engine.cpp
src/engine/platform/: platform.cpp
src/engine/resources/: resource_manager.cpp
src/engine/scene/: Scene.cpp  SceneManager.cpp  SceneNode.cpp  scene_manager.cpp
src/engine/scripting/: script_manager.cpp
src/engine/utils/: string_utils.cpp
src/engine/window/: vulkan_window.cpp  window_manager.cpp
src/game/: CMakeLists.txt  DemoGame.cpp  DemoMain.cpp  Game.cpp  Pong3D.cpp  PongGame.cpp  PongMain.cpp  PongMinimal.cpp  PongStandalone.cpp  PongTest1.cpp  PongTest2.cpp  PongTest3.cpp  PongWorking.cpp  SimpleTest.cpp
src/game/Qt/: PongControlPanel.cpp  PongControlPanel.hpp  PongMainWindow.cpp  PongMainWindow.hpp  PongRenderWidget.cpp  PongRenderWidget.hpp
src/game/audio/: game_audio.cpp
src/game/core/: game.cpp
src/game/graphics/: game_renderer.cpp
src/game/input/: game_input.cpp
src/game/network/: game_network.cpp
src/game/physics/: game_physics.cpp
src/game/platform/: game_platform.cpp
src/game/scene/: game_scene.cpp
src/game/scripting/: game_script.cpp
src/game/utils/: game_utils.cpp
tests/: CMakeLists.txt  fuzz_string_utils.cpp  run_all_tests.py  test_build_system.py  test_engine.cpp  test_game.cpp  test_integration_build.py  test_math.cpp  test_report.json  test_string_utils.cpp  test_system.py
tests/fakes/: README.md
tests/fuzz/: test_fuzz.cpp
tests/integration/: test_integration.cpp
tests/performance/: test_performance.cpp
tests/platform/: README.md  test_linux_clang.cpp  test_linux_gcc.cpp  test_windows_mingw.cpp  test_windows_msvc.cpp
tests/unit/: __init__.py  test_audio_manager.cpp  test_ecs.cpp  test_engine.cpp  test_engine_core.cpp  test_input_manager.cpp  test_physics_engine.cpp  test_quill_logger.cpp  test_resource_manager.cpp  test_spdlog_logger.cpp
tests/unit/compilers/: test_android_cross_compiler.py  test_capability_detector.py  test_chocolatey_detector.py  test_cmake_generator_selector.py  test_compiler_detection_cache.py  test_compiler_detection_system.py  test_compiler_factory.py  test_compiler_manager.py  test_compiler_terminal_mapper.py  test_error_handler.py  test_fallback_mechanism.py  test_linux_cross_compiler.py  test_logging_integration.py  test_mingw_clang_detector.py  test_mingw_environment.py  test_mingw_gcc_detector.py  test_mingw_terminal_detector.py  test_msvc_architecture.py  test_msvc_clang_detector.py  test_msvc_detector.py  test_msvc_environment.py  test_msvc_terminal_detector.py  test_parallel_detector.py  test_retry_mechanism.py  test_scoop_detector.py  test_terminal_invoker.py  test_toolchain_detector.py  test_version_detector.py  test_wasm_cross_compiler.py  test_winget_detector.py
tests/unit/platform/: __init__.py  test_linux_distribution.py
(+650 files in other folders)
