[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicpp"
version = "1.0.0"
description = "OmniCpp Build System"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["scripts.python"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = true
